Remove Stress imports/registrations and links

--- a/templates/games/_panel.html
+++ b/templates/games/_panel.html
@@ -1,7 +1,5 @@
-<a class="game-tile" href="{{ url_for('stress.home') }}">
-
-
+<a class="game-tile" href="{{ url_for('game') }}">
   <span class="icon">🎮</span>
-  <span>Stress</span>
+  <span>Game_1</span>
 </a>
 <div id="gx-root-chat"></div>
