Add Xeri game (vs CPU), keep Stress intact; change left panel tile to Xeri; add 'Play vs Computer' button on Tables

--- a/templates/games/_panel.html
+++ b/templates/games/_panel.html
@@ -1,6 +1,6 @@
-<a class="game-tile" href="{{ url_for('game_tables', room_name='Game_1') }}">
-  <span class="icon">🎮</span>
-  <span>Game_1</span>
+<a class="game-tile" href="{{ url_for('xeri_bp.lobby') }}">
+  <span class="icon">🔱</span><span>Xeri</span>
 </a>
+
 
 <div id="gx-root-chat"></div>
